Spring boot 4.0 upgrade